--- a/README
+++ b/README
@@ -101,7 +101,7 @@ Explanation of options
     notification would be sent if over a period of 80 seconds, the average CPU
     usage was 60%. The default for this is 10.
 
-  --resent-wait NUMBER
+  --resend-wait NUMBER
     This is the amount of time in minutes that health.js should wait before sending
     another notification to remote server. The default for this is 360 (6 hours).
 
