Minor README fix

--- a/README
+++ b/README
@@ -6,7 +6,7 @@ usage alerts.
 Tested on Node.js 0.2.3 and 0.2.4. This will only run on Linux.
 OSX and BSD are not supported.
 
-Another fun project sponsored by Last.VC <http://last.vc/>
+Another fun project sponsored by Last.VC (http://last.vc/)
 
 Author: Brendon Crawford
 Some concepts taken from http://colby.id.au/node/39
