Minor documentation fixes

--- a/README
+++ b/README
@@ -10,9 +10,10 @@ Another fun project sponsored by Last.VC (http://last.vc/)
 
 Author: Brendon Crawford
 Some concepts taken from http://colby.id.au/node/39
+
 See http://colby.id.au/node/39
-See https://github.com/brendoncrawford/healthjs
-See http://last.vc/
+See https://github.com/last/healthjs
+
 
 ##
 ## Basic Usage
